# bzip2-cpp

./: CMakeLists.txt  README.md
include/: bzip2-cpp-lib.hpp
src/: bzip2-cpp-lib.cpp
test/: test.cpp
